// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`zodToMongoSchema > should convert documentContents schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
      "description": "Identifiant unique",
    },
    "content": {
      "additionalProperties": true,
      "bsonType": "object",
      "description": "Contenu du document",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "document_id": {
      "bsonType": "string",
      "description": "Identifiant du document",
    },
    "type_document": {
      "bsonType": "string",
      "description": "Le type de document (exemple: DECA, etc..)",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "document_id",
  ],
}
`;

exports[`zodToMongoSchema > should convert documents schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
      "description": "Identifiant unique",
    },
    "added_by": {
      "bsonType": "string",
      "description": "Qui a ajouté le fichier",
    },
    "chemin_fichier": {
      "bsonType": "string",
      "description": "Chemin du fichier binaire",
    },
    "columns": {
      "bsonType": "array",
      "description": "Liste des colonnes",
      "items": {
        "bsonType": "string",
      },
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "delimiter": {
      "bsonType": "string",
      "description": "Délimiteur",
    },
    "ext_fichier": {
      "bsonType": "string",
      "description": "Le type de fichier extension",
      "enum": [
        "xlsx",
        "xls",
        "csv",
      ],
    },
    "hash_fichier": {
      "bsonType": "string",
      "description": "Checksum fichier",
    },
    "hash_secret": {
      "bsonType": "string",
      "description": "Hash fichier",
    },
    "import_progress": {
      "bsonType": "number",
      "description": "Progress percentage (-1 not started)",
    },
    "lines_count": {
      "bsonType": "int",
      "description": "Number of lines",
    },
    "nom_fichier": {
      "bsonType": "string",
      "description": "Le nom de fichier",
    },
    "taille_fichier": {
      "bsonType": "int",
      "description": "Taille du fichier en bytes",
    },
    "type_document": {
      "bsonType": "string",
      "description": "Le type de document (exemple: DECA, etc..)",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "type_document",
    "ext_fichier",
    "nom_fichier",
    "chemin_fichier",
    "taille_fichier",
    "hash_secret",
    "hash_fichier",
    "added_by",
    "created_at",
  ],
}
`;

exports[`zodToMongoSchema > should convert events schema 1`] = `
{
  "additionalProperties": true,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
      "description": "Identifiant unique",
    },
    "name": {
      "bsonType": "string",
      "description": "Nom de l'évènement",
      "enum": [
        "bal_emails",
      ],
    },
    "payload": {
      "additionalProperties": true,
      "bsonType": "object",
      "description": "Payload de l'évènement",
      "properties": {
        "emails": {
          "bsonType": "array",
          "items": {
            "additionalProperties": true,
            "bsonType": "object",
            "properties": {
              "error": {
                "bsonType": "array",
                "items": {
                  "additionalProperties": true,
                  "bsonType": "object",
                  "properties": {
                    "err_type": {
                      "bsonType": "string",
                      "enum": [
                        "fatal",
                        "soft_bounce",
                        "hard_bounce",
                        "complaint",
                        "invalid_email",
                        "blocked",
                        "error",
                      ],
                    },
                    "message": {
                      "bsonType": "string",
                    },
                  },
                },
              },
              "messageIds": {
                "bsonType": "array",
                "items": {
                  "bsonType": "string",
                },
              },
              "openDate": {
                "bsonType": "date",
              },
              "payload": {
                "additionalProperties": true,
                "bsonType": "object",
                "properties": {
                  "recipient": {
                    "additionalProperties": true,
                    "bsonType": "object",
                    "properties": {
                      "email": {
                        "bsonType": "string",
                      },
                    },
                    "required": [
                      "email",
                    ],
                  },
                },
                "required": [
                  "recipient",
                ],
              },
              "sendDates": {
                "bsonType": "array",
                "items": {
                  "bsonType": "date",
                },
              },
              "templateName": {
                "bsonType": "string",
              },
              "token": {
                "bsonType": "string",
              },
            },
            "required": [
              "token",
              "templateName",
              "payload",
              "sendDates",
            ],
          },
        },
        "unsubscribe": {
          "bsonType": "bool",
          "description": "unsubscribe email",
        },
      },
      "required": [
        "emails",
      ],
    },
    "person_id": {
      "bsonType": "string",
      "description": "Identifiant de la personne",
    },
  },
  "required": [
    "_id",
    "person_id",
    "name",
    "payload",
  ],
}
`;

exports[`zodToMongoSchema > should convert jobs schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
      "description": "Identifiant unique",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "cron_string": {
      "bsonType": "string",
      "description": "standard cron string exemple: '*/2 * * * *'",
    },
    "ended_at": {
      "bsonType": "date",
      "description": "Date de fin d'execution",
    },
    "name": {
      "bsonType": "string",
      "description": "Le nom de la tâche",
    },
    "output": {
      "additionalProperties": true,
      "bsonType": "object",
      "description": "Les valeurs de retours du job",
    },
    "payload": {
      "additionalProperties": true,
      "bsonType": "object",
      "description": "La donnée liéé à la tâche",
    },
    "scheduled_for": {
      "bsonType": "date",
      "description": "Date de lancement programmée",
    },
    "started_at": {
      "bsonType": "date",
      "description": "Date de lancement",
    },
    "status": {
      "bsonType": "string",
      "description": "Statut courant du job",
      "enum": [
        "pending",
        "will_start",
        "running",
        "finished",
        "blocked",
        "errored",
      ],
    },
    "sync": {
      "bsonType": "bool",
      "description": "Si le job est synchrone",
    },
    "type": {
      "bsonType": "string",
      "description": "Type du job simple ou cron",
      "enum": [
        "simple",
        "cron",
        "cron_task",
      ],
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "name",
    "type",
    "status",
    "scheduled_for",
  ],
}
`;

exports[`zodToMongoSchema > should convert organisations schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
      "description": "Identifiant unique",
    },
    "_meta": {
      "additionalProperties": true,
      "bsonType": "object",
      "description": "Métadonnées",
      "properties": {
        "sources": {
          "bsonType": "array",
          "items": {
            "bsonType": "string",
          },
        },
      },
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "email_domains": {
      "bsonType": "array",
      "description": "Liste des domaines email",
      "items": {
        "bsonType": "string",
      },
    },
    "etablissements": {
      "bsonType": "array",
      "description": "Liste des établissements",
      "items": {
        "additionalProperties": false,
        "bsonType": "object",
        "properties": {
          "is_close": {
            "bsonType": "bool",
            "description": "Est fermé",
          },
          "is_hq": {
            "bsonType": "bool",
            "description": "Siège social",
          },
          "nom": {
            "bsonType": "string",
            "description": "Nom de l'établissement",
          },
          "siret": {
            "bsonType": "string",
            "description": "Siret actif de l'établissement",
          },
        },
      },
    },
    "nom": {
      "bsonType": "string",
      "description": "Nom de l'organisation",
    },
    "siren": {
      "bsonType": "string",
      "description": "Siren de l'organisation",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
  ],
}
`;

exports[`zodToMongoSchema > should convert persons schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
      "description": "Identifiant unique",
    },
    "_meta": {
      "additionalProperties": true,
      "bsonType": "object",
      "description": "Métadonnées",
      "properties": {
        "sources": {
          "bsonType": "array",
          "items": {
            "bsonType": "string",
          },
        },
      },
    },
    "civility": {
      "bsonType": "string",
      "description": "civilité",
      "enum": [
        "Madame",
        "Monsieur",
      ],
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "email": {
      "bsonType": "string",
      "description": "Email de la personne",
    },
    "nom": {
      "bsonType": "string",
      "description": "Le nom de la personne",
    },
    "organisations": {
      "bsonType": "array",
      "description": "Liste des organisations",
      "items": {
        "bsonType": "string",
        "description": "Identifiant de l'organisation",
      },
    },
    "prenom": {
      "bsonType": "string",
      "description": "Le prénom de la personne",
    },
    "sirets": {
      "bsonType": "array",
      "description": "Liste de sirets recensé (sécurisation qualité de la donnée)",
      "items": {
        "bsonType": "string",
      },
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "email",
    "organisations",
  ],
}
`;

exports[`zodToMongoSchema > should convert sessions schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
      "description": "Identifiant unique",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "token": {
      "bsonType": "string",
      "description": "Token de la session",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "token",
  ],
}
`;

exports[`zodToMongoSchema > should convert users schema 1`] = `
{
  "additionalProperties": false,
  "bsonType": "object",
  "properties": {
    "_id": {
      "bsonType": "objectId",
      "description": "Identifiant unique",
    },
    "api_key": {
      "bsonType": "string",
      "description": "Clé API",
    },
    "api_key_used_at": {
      "anyOf": [
        {
          "bsonType": "date",
        },
        {
          "bsonType": "null",
        },
      ],
      "description": "Date de dernière utilisation de la clé API",
    },
    "created_at": {
      "bsonType": "date",
      "description": "Date d'ajout en base de données",
    },
    "email": {
      "bsonType": "string",
      "description": "Email de l'utilisateur",
    },
    "is_admin": {
      "bsonType": "bool",
      "description": "Est administrateur",
    },
    "password": {
      "bsonType": "string",
      "description": "Mot de passe de l'utilisateur",
    },
    "person_id": {
      "bsonType": "string",
      "description": "Identifiant de la personne",
    },
    "updated_at": {
      "bsonType": "date",
      "description": "Date de mise à jour en base de données",
    },
  },
  "required": [
    "_id",
    "email",
    "password",
    "person_id",
  ],
}
`;
